RESOLVED FIXED131781
Uninline blend(Color, Color) to get AnimationUtilities out of Color.h
https://bugs.webkit.org/show_bug.cgi?id=131781
Summary Uninline blend(Color, Color) to get AnimationUtilities out of Color.h
Tim Horton
Reported 2014-04-16 19:39:16 PDT
yep
Attachments
patch (5.17 KB, patch)
2014-04-16 19:39 PDT, Tim Horton
simon.fraser: review+
patch (4.42 KB, patch)
2014-04-16 19:58 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2014-04-16 19:39:58 PDT
WebKit Commit Bot
Comment 2 2014-04-16 19:42:18 PDT
Attachment 229513 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/Color.cpp:470: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/graphics/Color.cpp:471: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/graphics/Color.cpp:472: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/graphics/Color.cpp:478: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/graphics/Color.cpp:479: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/graphics/Color.cpp:480: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 7 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2014-04-16 19:52:10 PDT
Comment on attachment 229513 [details] patch r=me if it builds.
Tim Horton
Comment 4 2014-04-16 19:52:40 PDT
Comment on attachment 229513 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=229513&action=review > Source/WebCore/ChangeLog:10 > + These can be static now. Or not, other platforms use them elsewhere.
Tim Horton
Comment 5 2014-04-16 19:58:44 PDT
WebKit Commit Bot
Comment 6 2014-04-17 00:33:51 PDT
Comment on attachment 229515 [details] patch Clearing flags on attachment: 229515 Committed r167423: <http://trac.webkit.org/changeset/167423>
WebKit Commit Bot
Comment 7 2014-04-17 00:33:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.