Uninline blend(Color, Color) to get AnimationUtilities out of Color.h https://bugs.webkit.org/show_bug.cgi?id=131781

Reviewed by Simon Fraser.

* platform/graphics/Color.cpp:
(WebCore::blend):
Un-inline.

* platform/graphics/Color.h:
No more AnimationUtilities.


Canonical link: https://commits.webkit.org/149853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167423 268f45cc-cd09-0410-ab3c-d52691b4dbfc